<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AtmActivity">

    <TextView
        android:id="@+id/text_view_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        tools:text="Днепропетровск"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="104dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:gravity="center_vertical"
        android:text="@string/address_atm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="104dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:gravity="center_vertical"
        android:text="@string/work_time_atm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_address" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="104dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:gravity="center_vertical"
        android:text="@string/place_atm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_city" />

    <TextView
        android:id="@+id/text_view_place"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/text_view_address"
        android:layout_width="256dp"
        android:layout_height="73dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/text_view_work_time"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:textColor="@color/colorSky"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView6" />
</androidx.constraintlayout.widget.ConstraintLayout>